[gd_scene load_steps=7 format=3 uid="uid://ccyo3a8r1grlu"]

[ext_resource type="Script" path="res://models/creatures/queenAI.gd" id="1_5eha1"]
[ext_resource type="PackedScene" uid="uid://cyfi811xyve8e" path="res://systems/fsm/abstract_state_machine.tscn" id="3_m2cxo"]
[ext_resource type="Script" path="res://systems/ai/states/estate_idle.gd" id="4_h4hi8"]
[ext_resource type="PackedScene" uid="uid://dbeitcqkgyxws" path="res://models/creatures/kour_working_file.tscn" id="5_8m531"]
[ext_resource type="Script" path="res://models/creatures/estate_chase.gd" id="5_n3slv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_048qr"]

[node name="QueenAI" type="CharacterBody3D"]
script = ExtResource("1_5eha1")

[node name="VisionTimer" type="Timer" parent="."]
autostart = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="VisionRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.976971, -0.213371, 0, 0.213371, 0.976971, 0, 7.44099, 4.32144)
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="AbstractStateMachine" parent="." instance=ExtResource("3_m2cxo")]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="AbstractStateMachine"]
script = ExtResource("4_h4hi8")

[node name="Chase" type="Node" parent="AbstractStateMachine"]
script = ExtResource("5_n3slv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_048qr")

[node name="KourWorkingFile" parent="." instance=ExtResource("5_8m531")]
