[gd_scene load_steps=5 format=3 uid="uid://dbeitcqkgyxws"]

[ext_resource type="PackedScene" uid="uid://cpgdejxjfhkpn" path="res://models/creatures/KourWorkingFile.blend" id="1_b8dtu"]
[ext_resource type="PackedScene" path="res://models/creatures/vision_cones.tscn" id="2_6x5ma"]
[ext_resource type="Script" path="res://models/creatures/queenAI.gd" id="2_wi7x8"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bo3do"]
points = PackedVector3Array(-5.96046e-08, -1, 1, -0.195184, -1, 0.980619, 0.194988, -1, 0.980619, -5.96046e-08, 1, 0, -0.382733, -1, 0.923845, 0.382537, -1, 0.923845, -0.707126, -1, 0.70693, -0.555599, -1, 0.831441, 0.555403, -1, 0.831441, 0.70693, -1, 0.70693, 0.831441, -1, 0.555403, 0.923845, -1, 0.382537, 0.980618, -1, 0.194988, 1, -1, 0, 0.980618, -1, -0.195184, 0.923845, -1, -0.382733, 0.831441, -1, -0.555599, 0.70693, -1, -0.707126, 0.555403, -1, -0.831637, 0.382537, -1, -0.924041, 0.194988, -1, -0.980814, -5.96046e-08, -1, -1, -0.195184, -1, -0.980814, -0.382733, -1, -0.924041, -0.555599, -1, -0.831637, -0.707126, -1, -0.707126, -0.831637, -1, -0.555599, -0.924041, -1, -0.382733, -0.980814, -1, -0.195184, -1, -1, 0, -0.980814, -1, 0.194988, -0.924041, -1, 0.382537, -0.831637, -1, 0.555403)

[node name="KourWorkingFile" instance=ExtResource("1_b8dtu")]
script = ExtResource("2_wi7x8")

[node name="VisionTimer" type="Timer" parent="." index="0"]
autostart = true

[node name="tail" parent="metarig/barrelSpine" index="0"]
transform = Transform3D(1, 2.85063e-07, 2.25497e-06, -1.48249e-07, -0.981811, 0.189857, 2.2681e-06, -0.189858, -0.981805, -4.40536e-13, -5.96046e-07, 1.78814e-07)

[node name="Torso2" parent="metarig/barrelSpine" index="1"]
transform = Transform3D(1, 1.656e-06, 3.11269e-08, -2.36572e-07, 0.124206, 0.992256, 1.63931e-06, -0.992256, 0.124206, 7.43932e-07, 5.28022, -0.445755)

[node name="spine_012" parent="metarig/barrelSpine/Torso2" index="0"]
transform = Transform3D(1, -2.36522e-07, 1.4005e-06, 1.41913e-06, 0.125856, -0.992048, 5.83796e-08, 0.992049, 0.125856, 2.84217e-14, 2.92061, 1.19209e-07)

[node name="Vision" type="Area3D" parent="metarig/barrelSpine/Torso2/spine_012/Head" index="0"]
transform = Transform3D(1, -2.13163e-13, 0, -1.06581e-13, 1, 0, 1.20792e-13, 0, 1, 4.10306e-06, 7.73366, 5.45693)

[node name="Cone" parent="metarig/barrelSpine/Torso2/spine_012/Head/Vision" index="0" instance=ExtResource("2_6x5ma")]
transform = Transform3D(-5, 4.29537e-06, -2.52094e-06, 7.54954e-07, -1.84792, -4.64599, -4.92294e-06, -4.64599, 1.84792, -1.54837e-06, 1.13827, 3.74892)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="metarig/barrelSpine/Torso2/spine_012/Head/Vision" index="1"]
transform = Transform3D(-5, 4.29537e-06, -2.52094e-06, 7.54954e-07, -1.84792, -4.64599, -4.92294e-06, -4.64599, 1.84792, -1.54837e-06, 1.13827, 3.74892)
shape = SubResource("ConvexPolygonShape3D_bo3do")

[node name="UpperShoulderL" parent="metarig/barrelSpine/Torso2" index="1"]
transform = Transform3D(0.535764, 0.706664, 0.462151, 0.63995, -0.696898, 0.323725, 0.550837, 0.122313, -0.825602, 0.227901, 2.05544, -0.143698)

[node name="UpperShoulderL_002" parent="metarig/barrelSpine/Torso2/UpperShoulderL" index="0"]
transform = Transform3D(0.979985, -0.0859443, -0.179561, 0.114051, 0.981687, 0.152585, 0.163159, -0.17001, 0.971841, -0.017776, 3.60852, -0.189293)

[node name="UpperShoulderL_003" parent="metarig/barrelSpine/Torso2/UpperShoulderL/UpperShoulderL_002" index="0"]
transform = Transform3D(0.998486, -0.0526283, 0.0160231, 0.053976, 0.99348, -0.100424, -0.0106334, 0.101137, 0.994816, -1.19209e-07, 2.08782, 1.78814e-07)

[node name="UpperShoulderL_004" parent="metarig/barrelSpine/Torso2" index="2"]
transform = Transform3D(0.535764, -0.706664, -0.462151, -0.63995, -0.696898, 0.323725, -0.550837, 0.122313, -0.825602, -0.204941, 2.05516, -0.0897779)

[node name="UpperShoulderL_006" parent="metarig/barrelSpine/Torso2/UpperShoulderL_004" index="0"]
transform = Transform3D(0.979985, 0.0859441, 0.179561, -0.114051, 0.981687, 0.152585, -0.163159, -0.17001, 0.971842, 0.0177761, 3.60852, -0.189294)

[node name="UpperShoulderL_007" parent="metarig/barrelSpine/Torso2/UpperShoulderL_004/UpperShoulderL_006" index="0"]
transform = Transform3D(0.998485, 0.0526285, -0.0160231, -0.0539762, 0.993479, -0.100424, 0.0106334, 0.101137, 0.994816, 4.76837e-07, 2.08782, 0)

[node name="shoulder_L" parent="metarig/barrelSpine" index="2"]
transform = Transform3D(0.964473, 0.147645, 0.219071, 0.158988, 0.33787, -0.927667, -0.210983, 0.92954, 0.302393, 0.396937, 4.81286, -1.76604)

[node name="upper_arm_L" parent="metarig/barrelSpine/shoulder_L" index="0"]
transform = Transform3D(0.964473, -0.187167, -0.186442, 0.147647, 0.967116, -0.207092, 0.219072, 0.172207, 0.960392, -0.167649, 3.65707, 0.473461)

[node name="forearm_L" parent="metarig/barrelSpine/shoulder_L/upper_arm_L" index="0"]
transform = Transform3D(1, -5.60626e-08, 4.8825e-07, 1.94519e-08, 0.997209, 0.074663, -4.91073e-07, -0.074663, 0.997209, 2.12463e-08, 1.26549, 1.94624e-07)

[node name="hand_L" parent="metarig/barrelSpine/shoulder_L/upper_arm_L/forearm_L" index="0"]
transform = Transform3D(1, 1.08325e-07, -2.12389e-07, 3.55271e-15, 0.890824, 0.454348, 2.38419e-07, -0.454348, 0.890824, -2.00612e-08, 0.97589, 9.88002e-08)

[node name="f_toe_L" parent="metarig/barrelSpine/shoulder_L/upper_arm_L/forearm_L/hand_L" index="0"]
transform = Transform3D(1, 2.84217e-14, 7.15256e-07, -3.1441e-07, 0.898205, 0.439576, -6.42447e-07, -0.439576, 0.898205, 0, 0.598821, 8.5165e-08)

[node name="shoulder_R" parent="metarig/barrelSpine" index="3"]
transform = Transform3D(0.964473, -0.147648, -0.219072, -0.158989, 0.33787, -0.927667, 0.210987, 0.92954, 0.302392, -0.396931, 4.81286, -1.76604)

[node name="upper_arm_R" parent="metarig/barrelSpine/shoulder_R" index="0"]
transform = Transform3D(0.964473, 0.187167, 0.186442, -0.147647, 0.967116, -0.207092, -0.219072, 0.172207, 0.960392, 0.167649, 3.65707, 0.473461)

[node name="forearm_R" parent="metarig/barrelSpine/shoulder_R/upper_arm_R" index="0"]
transform = Transform3D(1, 2.15159e-08, -4.75894e-07, 1.40757e-08, 0.997209, 0.074663, 4.76172e-07, -0.074663, 0.997209, 2.0213e-09, 1.26549, -1.39703e-07)

[node name="hand_R" parent="metarig/barrelSpine/shoulder_R/upper_arm_R/forearm_R" index="0"]
transform = Transform3D(1, -1.08325e-07, 2.12389e-07, -1.06581e-14, 0.890824, 0.454348, -2.38419e-07, -0.454348, 0.890824, 7.96658e-08, 0.97589, 6.62546e-08)

[node name="f_toe_R" parent="metarig/barrelSpine/shoulder_R/upper_arm_R/forearm_R/hand_R" index="0"]
transform = Transform3D(1, 0, -7.15256e-07, 3.1441e-07, 0.898205, 0.439577, 6.42447e-07, -0.439577, 0.898205, 5.96048e-08, 0.598821, -1.82071e-07)

[node name="thigh_L" parent="metarig/barrelSpine" index="4"]
transform = Transform3D(0.999998, 0.00146598, 0.00106843, 0.00128351, -0.155594, -0.987821, -0.00128188, 0.98782, -0.155595, 0.815071, 0.822323, 0.199032)

[node name="thigh_R" parent="metarig/barrelSpine" index="5"]
transform = Transform3D(0.999998, -0.00146928, -0.00106791, -0.00128351, -0.155594, -0.987821, 0.00128522, 0.98782, -0.155595, -0.815072, 0.822323, 0.199029)

[node name="foot_R" parent="metarig/barrelSpine/thigh_R" index="0"]
transform = Transform3D(0.999998, 0.00125316, 0.00131317, -0.00146777, 0.983882, 0.178814, -0.00106792, -0.178816, 0.983882, 3.25963e-08, 3.17805, 1.33296e-07)

[node name="r_pastern_R" parent="metarig/barrelSpine/thigh_R/foot_R" index="0"]
transform = Transform3D(1, -5.6117e-08, 2.3172e-07, 1.60073e-10, 0.972063, 0.234719, -2.38419e-07, -0.234719, 0.972063, -3.07947e-08, 1.2948, 4.63414e-08)

[node name="r_toe_R" parent="metarig/barrelSpine/thigh_R/foot_R/r_pastern_R" index="0"]
transform = Transform3D(1, -7.70948e-15, 1.19371e-14, 3.7892e-18, 0.84018, 0.542307, -1.42102e-14, -0.542307, 0.84018, 4.09672e-14, 0.441136, -7.45682e-08)

[node name="Plane" parent="." index="2"]
visible = false

[node name="Shields" parent="." index="3"]
visible = false

[node name="Sword" parent="." index="4"]
visible = false

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="6"]

[connection signal="timeout" from="VisionTimer" to="." method="_on_vision_timer_timeout"]
